# durlib

./: CMakeLists.txt  README.md  durlib.h
deprecated/tests/: Custom_Test.cpp  test.cpp
docs/: Durlib.md
durlib/: PCH.h
durlib/Core/: _CORE.h
durlib/Database/: sqlite3_include.h
durlib/Database/sqlite3/core/: database.cpp  database.h
durlib/Database/sqlite3/item/: item.cpp  item.h
durlib/Datatype/Date/: DateMath.cpp  DateMath.h
durlib/Input/: Input.cpp  Input.h  Validation.cpp  Validation.h
durlib/Log/: Log.cpp  Log.h
durlib/Math/: Math.h
durlib/Math/Formulas/: EarthCoordinates.cpp  EarthCoordinates.h  Utils.cpp  Utils.h
durlib/Math/Rational/: Fraction.cpp  Fraction.h
durlib/Serialization/CSV/: CSV.cpp  CSV.h  CSVLL.cpp  CSVLL.h
durlib/Serialization/CSV/Algorithms/: ALGO.cpp  ALGO.h
durlib/Serialization/Json/: JsonParse.cpp  JsonParse.h
examples/: CMakeLists.txt
examples/Fractions/: CMakeLists.txt  Fractions.cpp
tests/: CMakeLists.txt
tests/durlib_math/: FractionTest.cpp
